--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta
+      name="description"
+      content="小兔鲜儿官网，致力于打造全球最大的食品、生鲜电商购物平台"
+    />
+    <meta name="keywords" content="小兔鲜儿,食品,生鲜,服装,家电,电商,购物" />
+    <link
+      rel="stylesheet"
+      href="//at.alicdn.com/t/c/font_4402136_b3j2bhia1n4.css"
+    />
+    <title>小兔鲜儿-新鲜、惠民、快捷!</title>
+    <style>
+      /* #app {
+        height: 100%;
+        width: 100%;
+      } */
+      /* body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100%;
+      } */
+    </style>
   </head>
   <body>
     <div id="app"></div>
